# localvox-light

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build-binaries.yml
crates/localvox-light/: Cargo.toml
crates/localvox-light-core/: Cargo.toml  build.rs
crates/localvox-light-core/src/: audio.rs  cli.rs  engine.rs  events.rs  lib.rs  light_config.rs  pipeline.rs  session.rs  transcript.rs
crates/localvox-light-core/src/asr/: mod.rs  vosk.rs
crates/localvox-light-tui/: Cargo.toml
crates/localvox-light-tui/src/: keys.rs  lib.rs  tui.rs
crates/localvox-light/src/: main.rs
scripts/: install-release.ps1  install-release.sh  setup-vosk-linux-amd64.sh  setup-vosk-linux-arm64.sh  setup-vosk-mac.sh  setup-vosk.ps1  setup-vosk.sh
src/: keys.rs  light_config.rs  main.rs  session.rs  transcript.rs  tui.rs
src/asr/: mod.rs  vosk.rs
