[package]
name = "localvox-light"
version = "0.1.0"
edition = "2021"
description = "Standalone local transcription: audio capture → VAD → Vosk ASR → transcript. No server needed."

[[bin]]
name = "localvox-light"
path = "src/main.rs"

[dependencies]
cpal = "0.17"
webrtc-vad = "0.4"
hound = "3"
vosk = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
crossbeam-channel = "0.5"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
uuid = { version = "1", features = ["v7"] }
ctrlc = "3"
dotenvy = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
